--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,15 @@
   --secondary-color: #f5f2fe;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  margin: 60px auto;
   max-width: 800px;
+  padding: 10px;
 }
 
 h1,
@@ -18,6 +23,18 @@ h3 {
 
 h1 {
   font-size: 96px;
+}
+@media (max-width: 440px) {
+  h1 {
+    font-size: 44px;
+    padding-bottom: 20px;
+  }
+  .navbar {
+    margin: 10px auto;
+  }
+  .navigation-links {
+    margin-top: 0;
+  }
 }
 
 h2 {
@@ -34,7 +51,9 @@ p {
   font-size: 18px;
   line-height: 1.5;
 }
-
+.navbar {
+  margin: 60px auto;
+}
 .navigation-links {
   display: flex;
   margin-top: 40px;
@@ -95,6 +114,12 @@ p {
 .weather__container,
 .yogurt__container {
   display: flex;
+}
+@media (max-width: 500px) {
+  .yoga__container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .image__block {
   flex: 1;
