--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@
 
 body {
   max-width: 800px;
-  padding: 10px;
+  margin: 10px auto;
 }
 
 h1,
@@ -34,6 +34,9 @@ h1 {
   }
   .navigation-links {
     margin-top: 0;
+  }
+  .email-link {
+    font-size: 18px;
   }
 }
 
@@ -122,7 +125,7 @@ p {
   }
 }
 .image__block {
-  flex: 1;
+  flex: 2;
 }
 .yoga__img,
 .weather__img {
